@@ -4,6 +4,7 @@
 
 Version 1.1.11 work in progress
 -------------------------------
+- Enh #171: Added support for PUT and DELETE request tunneled through POST via parameter named _method in POST body (musterknabe)
 
 
 Version 1.1.10 February 12, 2012
